дописала основную логику и стили(возможно надо еще подкрутить адаптив)

--- a/Quiz/quiz.html
+++ b/Quiz/quiz.html
@@ -17,6 +17,9 @@
             <div class="heading">
                 Тест на знание "Смешариков"
             </div>
+            <div class="progress-bar">
+                <div class="completed-part"></div>
+            </div>
             <div class="questions-wrapper">
                 <div class="question">
                     Какой-то вопрос?
@@ -28,14 +31,14 @@
                     <button class="answer-button ">ответ</button>
                     <input type="text" id="inputForAnswer" placeholder="введи свой ответ" class="answer-input" required>
                 </div>
-                <div class="results">
-                    Вы ответили правильно на <span class="right"></span> из <span class="total"></span> вопросов (<span
-                        class="percent"></span>%).
-                </div>
+            </div>
+            <div class="results">
+                Вы ответили правильно на <span class="right"></span> из <span class="total"></span> вопросов (<span
+                    class="percent"></span>%).
             </div>
             <div class="button-wrapper">
-                <button class="pushing-button start">START</button>
-                <button class="pushing-button restart">RESTART</button>
+                <button class="pushing-button start">ОТ ВИНТА!</button>
+                <button class="pushing-button restart">ДАВАЙ ЗАНОВО</button>
             </div>
         </div>
     </main>
