добавлен таймер на вопрос и организован localStorage для лучшего результата

--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -20,6 +20,9 @@
             <div class="progress-bar">
                 <div class="completed-part"></div>
             </div>
+            <div class="timer">
+                00:<span class="time-left">30</span>
+            </div>
             <div class="questions-wrapper">
                 <div class="question">
                     Какой-то вопрос?
@@ -35,6 +38,9 @@
             <div class="results">
                 Вы ответили правильно на <span class="right"></span> из <span class="total"></span> вопросов (<span
                     class="percent"></span>%).
+            </div>
+            <div class="best-results">
+                Ваш лучший результат - <span class="best-right"></span> из <span class="total"></span> (<span class="best-percent"></span>%).
             </div>
             <div class="button-wrapper">
                 <button class="pushing-button start">ОТ ВИНТА!</button>
